--- a/css/main.css
+++ b/css/main.css
@@ -1,73 +1,86 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
-*{
-  font-family: 'Open Sans', sans-serif;
+* {
+    font-family: 'Open Sans', sans-serif;
 }
+
 header .container .row .col-12 {
     border: 1px solid transparent;
 }
-.nav{
+
+.nav {
     position: relative;
     width: 100%;
     border: 1px solid transparent;
 }
-.logo{
+
+.logo {
     width: 80%;
     height: auto;
 }
+
 .nav-logo {
     float: left;
     padding: 12px 12px;
     font-size: 18px;
     line-height: 20px;
 }
-.menu{
+
+.contenedor-menu {
     float: right;
-    display: block;
+    display: inline-block;
     padding: 12px 12px;
+    width: 200px;
 }
-a{
-  color: black
+
+a {
+    color: black
 }
-.titulo{
+
+.titulo {
     color: white;
     padding: 5%;
     padding-top: 10%;
     font-size: 300%;
 }
-.parrafo{
+
+.parrafo {
     color: white;
     padding: 5%;
-    font-size:100%; 
+    font-size: 100%;
 }
-.form{
+
+.form {
     margin-top: 25%;
-    padding: 5%; 
-   background-color: #9A9A9A;
-   border-radius: 5px;
-   color: white;
+    padding: 5%;
+    background-color: #9A9A9A;
+    border-radius: 5px;
+    color: white;
 }
-input{
+
+input {
     margin-bottom: 15px;
 }
+
 .form-control {
-  display: block;
-  width: 100%;
-  height: 30px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-       -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    display: block;
+    width: 100%;
+    height: 30px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
-.btn-suscribe{
+
+.btn-suscribe {
     width: 100%;
     border: transparent;
     border-radius: 5px;
@@ -75,29 +88,31 @@ input{
     background-color: #3EB0F7;
     color: white;
 }
-footer{
+
+footer {
     padding-left: 5%;
 }
 
+
 /*RESPONSIVE*/
-@media screen and (max-width: 535px){
-    .container{
+
+@media screen and (max-width: 535px) {
+    .container {
         width: 100%;
         display: inline;
     }
-    section{
+    section {
         padding-bottom: 7%;
     }
-    section .row .col-8{
+    section .row .col-8 {
         width: 100%
     }
-    section .row .col-4{
+    section .row .col-4 {
         width: 100%
     }
-    .form{
+    .form {
         width: 90%;
-        padding:3%;
+        padding: 3%;
         margin: auto;
     }
-
 }
